fixed dark mode :hammer:

--- a/src/darkStyles/DarkStyles.css
+++ b/src/darkStyles/DarkStyles.css
@@ -15,6 +15,6 @@
   transition: all 0.25s linear;
 }
 
-body::-webkit-scr {
+body::-webkit-scrollbar {
   display: none;
 }
